Trying to work out test suits for protobuf, have some linking errors

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -145,12 +145,11 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake.in
                ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 # Include directories for this project
-set(LIBPROTOBUF_INCLUDES
-    ${CMAKE_CURRENT_BINARY_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${CMAKE_SOURCE_DIR}
-    ${CMAKE_SOURCE_DIR}/..)
-include_directories(${LIBPROTOBUF_INCLUDES})
+include_directories(
+ ${CMAKE_CURRENT_BINARY_DIR}
+ ${CMAKE_CURRENT_SOURCE_DIR}
+ ${CMAKE_SOURCE_DIR}
+ ${CMAKE_SOURCE_DIR}/..)
 
 # Targets ==============================================================
 # protobuf library
@@ -307,6 +306,48 @@ else ()
  target_link_libraries(protoc_compiler protoc z)
 endif ()
 
+# Generate test sources
+foreach(PROTOBUF_SAMPLE_INPUT
+ google/protobuf/unittest.proto
+ google/protobuf/unittest_empty.proto
+ google/protobuf/unittest_import.proto
+ google/protobuf/unittest_mset.proto
+ google/protobuf/unittest_optimize_for.proto
+ google/protobuf/unittest_embed_optimize_for.proto
+ google/protobuf/unittest_custom_options.proto
+ google/protobuf/unittest_lite.proto
+ google/protobuf/unittest_import_lite.proto
+ google/protobuf/unittest_lite_imports_nonlite.proto
+ google/protobuf/unittest_no_generic_services.proto
+ google/protobuf/compiler/cpp/cpp_test_bad_identifiers.proto)
+ add_custom_command(TARGET protoc_compiler POST_BUILD
+                    COMMAND ${EXECUTABLE_OUTPUT_PATH}/protoc
+                            ARGS ${CMAKE_CURRENT_SOURCE_DIR}/${PROTOBUF_SAMPLE_INPUT}
+                                 --proto_path="${CMAKE_CURRENT_SOURCE_DIR}"
+                                 --cpp_out="${EXECUTABLE_OUTPUT_PATH}")
+endforeach()
+
+#   google/protobuf/unittest.pb.cc
+#   google/protobuf/unittest.pb.h
+#   google/protobuf/unittest_empty.pb.cc
+#   google/protobuf/unittest_empty.pb.h
+#   google/protobuf/unittest_import.pb.cc
+#   google/protobuf/unittest_import.pb.h
+#   google/protobuf/unittest_mset.pb.cc
+#   google/protobuf/unittest_mset.pb.h
+#   google/protobuf/unittest_optimize_for.pb.cc
+#   google/protobuf/unittest_optimize_for.pb.h
+#   google/protobuf/unittest_embed_optimize_for.pb.cc
+#   google/protobuf/unittest_embed_optimize_for.pb.h
+#   google/protobuf/unittest_custom_options.pb.cc
+#   google/protobuf/unittest_custom_options.pb.h
+#   google/protobuf/unittest_lite_imports_nonlite.pb.cc
+#   google/protobuf/unittest_lite_imports_nonlite.pb.h
+#   google/protobuf/unittest_no_generic_services.pb.cc
+#   google/protobuf/unittest_no_generic_services.pb.h
+#   google/protobuf/compiler/cpp/cpp_test_bad_identifiers.pb.cc
+#   google/protobuf/compiler/cpp/cpp_test_bad_identifiers.pb.h
+
 # Tests ==============================================================
 # protobuf-test
 set(PROTOBUF_TEST_SOURCES
@@ -341,7 +382,7 @@ set(PROTOBUF_TEST_SOURCES
  google/protobuf/test_util.cc
  google/protobuf/testing/googletest.cc
  google/protobuf/testing/file.cc)
-include_directories(${CMAKE_SOURCE_DIR}/gtest/include)
+include_directories(${CMAKE_SOURCE_DIR}/gtest/include ${EXECUTABLE_OUTPUT_PATH})
 add_executable(protobuf_test ${PROTOBUF_TEST_SOURCES})
 if (HAVE_PTHREAD)
  set_target_properties(protobuf_test   PROPERTIES
@@ -354,94 +395,79 @@ endif ()
 add_test(protobuf_test ${EXECUTABLE_OUTPUT_PATH}/protobuf_test)
 
 # protobuf-lazy-descriptor-test
-set(PROTOBUF_LAZY_DESCRIPTOR_TEST_SOURCES
- google/protobuf/compiler/cpp/cpp_unittest.cc
- google/protobuf/test_util.cc
- google/protobuf/testing/googletest.cc
- google/protobuf/testing/file.cc)
-add_executable(protobuf_lazy_descriptor_test ${PROTOBUF_LAZY_DESCRIPTOR_TEST_SOURCES})
-if (HAVE_PTHREAD)
- set_target_properties(protobuf_lazy_descriptor_test PROPERTIES
-                       CMAKE_CXX_FLAGS               -pthread
-                       LINK_FLAGS                    -pthread
-                       COMPILE_DEFINITIONS "PROTOBUF_TEST_NO_DESCRIPTORS")
- target_link_libraries(protobuf_lazy_descriptor_test pthread protobuf gtest gtest_main)
-else ()
- set_target_properties(protobuf_lazy_descriptor_test PROPERTIES
-                       COMPILE_DEFINITIONS "PROTOBUF_TEST_NO_DESCRIPTORS")
- target_link_libraries(protobuf_lazy_descriptor_test protobuf gtest gtest_main)
-endif ()
-add_test(protobuf_lazy_descriptor_test ${EXECUTABLE_OUTPUT_PATH}/protobuf_lazy_descriptor_test)
-
+# set(PROTOBUF_LAZY_DESCRIPTOR_TEST_SOURCES
+#  google/protobuf/compiler/cpp/cpp_unittest.cc
+#  google/protobuf/test_util.cc
+#  google/protobuf/testing/googletest.cc
+#  google/protobuf/testing/file.cc)
+# add_executable(protobuf_lazy_descriptor_test ${PROTOBUF_LAZY_DESCRIPTOR_TEST_SOURCES})
+# if (HAVE_PTHREAD)
+#  set_target_properties(protobuf_lazy_descriptor_test PROPERTIES
+#                        CMAKE_CXX_FLAGS               -pthread
+#                        LINK_FLAGS                    -pthread
+#                        COMPILE_DEFINITIONS "PROTOBUF_TEST_NO_DESCRIPTORS")
+#  target_link_libraries(protobuf_lazy_descriptor_test pthread protobuf gtest gtest_main)
+# else ()
+#  set_target_properties(protobuf_lazy_descriptor_test PROPERTIES
+#                        COMPILE_DEFINITIONS "PROTOBUF_TEST_NO_DESCRIPTORS")
+#  target_link_libraries(protobuf_lazy_descriptor_test protobuf gtest gtest_main)
+# endif ()
+# add_test(protobuf_lazy_descriptor_test ${EXECUTABLE_OUTPUT_PATH}/protobuf_lazy_descriptor_test)
 
 # lite-unittest
-set(LITE_UNITTEST_SOURCES
- google/protobuf/lite_unittest.cc
- google/protobuf/test_util_lite.cc
- google/protobuf/test_util_lite.h)
-add_executable(lite_unittest ${LITE_UNITTEST_SOURCES})
-if (HAVE_PTHREAD)
- set_target_properties(lite_unittest   PROPERTIES
-                       CMAKE_CXX_FLAGS -pthread
-                       LINK_FLAGS      -pthread)
- target_link_libraries(lite_unittest pthread protobuf-lite)
-else ()
- target_link_libraries(lite_unittest protobuf-lite)
-endif ()
-add_test(lite_unittest ${EXECUTABLE_OUTPUT_PATH}/lite_unittest)
-
-# plugins
-set(PROTOBUF_PLUGINS_SOURCES
-  google/protobuf/compiler/mock_code_generator.cc
-  google/protobuf/testing/file.cc
-  google/protobuf/compiler/test_plugin.cc)
-add_executable(protobuf_plugins ${PROTOBUF_PLUGINS_SOURCES})
-if (HAVE_PTHREAD)
- set_target_properties(protobuf_plugins PROPERTIES
-                       CMAKE_CXX_FLAGS  -pthread
-                       LINK_FLAGS       -pthread)
- target_link_libraries(protobuf_plugins pthread protobuf protoc gtest z)
-else ()
- target_link_libraries(protobuf_plugins protobuf protoc gtest z)
-endif ()
-add_test(protobuf_plugins ${EXECUTABLE_OUTPUT_PATH}/protobuf_plugins)
+# set(LITE_UNITTEST_SOURCES
+#  google/protobuf/lite_unittest.cc
+#  google/protobuf/test_util_lite.cc
+#  google/protobuf/test_util_lite.h)
+# add_executable(lite_unittest ${LITE_UNITTEST_SOURCES})
+# if (HAVE_PTHREAD)
+#  set_target_properties(lite_unittest   PROPERTIES
+#                        CMAKE_CXX_FLAGS -pthread
+#                        LINK_FLAGS      -pthread)
+#  target_link_libraries(lite_unittest pthread protobuf-lite)
+# else ()
+#  target_link_libraries(lite_unittest protobuf-lite)
+# endif ()
+# add_test(lite_unittest ${EXECUTABLE_OUTPUT_PATH}/lite_unittest)
+# 
+# # plugins
+# set(PROTOBUF_PLUGINS_SOURCES
+#   google/protobuf/compiler/mock_code_generator.cc
+#   google/protobuf/testing/file.cc
+#   google/protobuf/compiler/test_plugin.cc)
+# add_executable(protobuf_plugins ${PROTOBUF_PLUGINS_SOURCES})
+# if (HAVE_PTHREAD)
+#  set_target_properties(protobuf_plugins PROPERTIES
+#                        CMAKE_CXX_FLAGS  -pthread
+#                        LINK_FLAGS       -pthread)
+#  target_link_libraries(protobuf_plugins pthread protobuf protoc gtest z)
+# else ()
+#  target_link_libraries(protobuf_plugins protobuf protoc gtest z)
+# endif ()
+# add_test(protobuf_plugins ${EXECUTABLE_OUTPUT_PATH}/protobuf_plugins)
 
 # zlib
-if (HAVE_ZLIB)
- set(ZCGZIP_SOURCES   google/protobuf/testing/zcgzip.cc)
- set(ZCGUNZIP_SOURCES google/protobuf/testing/zcgunzip.cc)
+# if (HAVE_ZLIB)
+#  set(ZCGZIP_SOURCES   google/protobuf/testing/zcgzip.cc)
+#  set(ZCGUNZIP_SOURCES google/protobuf/testing/zcgunzip.cc)
+# 
+#  add_executable(protobuf_zcgzip   ${ZCGZIP_SOURCES})
+#  add_executable(protobuf_zcgunzip ${ZCGUNZIP_SOURCES})
+# 
+#  if (HAVE_PTHREAD)
+#   set_target_properties(protobuf_zcgzip PROPERTIES
+#                         CMAKE_CXX_FLAGS -pthread
+#                         LINK_FLAGS      -pthread)
+#   target_link_libraries(protobuf_zcgzip pthread protobuf z)
+#  else ()
+#   target_link_libraries(protobuf_zcgzip protobuf z)
+#  endif ()
+# 
+#  add_test(protobuf_zcgzip ${EXECUTABLE_OUTPUT_PATH}/protobuf_zcgzip)
+#  add_test(protobuf_zcgunzip ${EXECUTABLE_OUTPUT_PATH}/protobuf_zcgunzip)
+# endif ()
 
- add_executable(protobuf_zcgzip   ${ZCGZIP_SOURCES})
- add_executable(protobuf_zcgunzip ${ZCGUNZIP_SOURCES})
 
- if (HAVE_PTHREAD)
-  set_target_properties(protobuf_zcgzip PROPERTIES
-                        CMAKE_CXX_FLAGS -pthread
-                        LINK_FLAGS      -pthread)
-  target_link_libraries(protobuf_zcgzip pthread protobuf z)
- else ()
-  target_link_libraries(protobuf_zcgzip protobuf z)
- endif ()
-
- add_test(protobuf_zcgzip ${EXECUTABLE_OUTPUT_PATH}/protobuf_zcgzip)
- add_test(protobuf_zcgunzip ${EXECUTABLE_OUTPUT_PATH}/protobuf_zcgunzip)
-endif ()
-
-
-# protoc_inputs =
-#   google/protobuf/unittest.proto
-#   google/protobuf/unittest_empty.proto
-#   google/protobuf/unittest_import.proto
-#   google/protobuf/unittest_mset.proto
-#   google/protobuf/unittest_optimize_for.proto
-#   google/protobuf/unittest_embed_optimize_for.proto
-#   google/protobuf/unittest_custom_options.proto
-#   google/protobuf/unittest_lite.proto
-#   google/protobuf/unittest_import_lite.proto
-#   google/protobuf/unittest_lite_imports_nonlite.proto
-#   google/protobuf/unittest_no_generic_services.proto
-#   google/protobuf/compiler/cpp/cpp_test_bad_identifiers.proto
-#
 # EXTRA_DIST =
 #   $(protoc_inputs)
 #   solaris/libstdc++.la
@@ -465,27 +491,6 @@ endif ()
 #
 # protoc_outputs =
 #   $(protoc_lite_outputs)
-#   google/protobuf/unittest.pb.cc
-#   google/protobuf/unittest.pb.h
-#   google/protobuf/unittest_empty.pb.cc
-#   google/protobuf/unittest_empty.pb.h
-#   google/protobuf/unittest_import.pb.cc
-#   google/protobuf/unittest_import.pb.h
-#   google/protobuf/unittest_mset.pb.cc
-#   google/protobuf/unittest_mset.pb.h
-#   google/protobuf/unittest_optimize_for.pb.cc
-#   google/protobuf/unittest_optimize_for.pb.h
-#   google/protobuf/unittest_embed_optimize_for.pb.cc
-#   google/protobuf/unittest_embed_optimize_for.pb.h
-#   google/protobuf/unittest_custom_options.pb.cc
-#   google/protobuf/unittest_custom_options.pb.h
-#   google/protobuf/unittest_lite_imports_nonlite.pb.cc
-#   google/protobuf/unittest_lite_imports_nonlite.pb.h
-#   google/protobuf/unittest_no_generic_services.pb.cc
-#   google/protobuf/unittest_no_generic_services.pb.h
-#   google/protobuf/compiler/cpp/cpp_test_bad_identifiers.pb.cc
-#   google/protobuf/compiler/cpp/cpp_test_bad_identifiers.pb.h
-#
 # COMMON_TEST_SOURCES =
 #   google/protobuf/test_util.cc
 #   google/protobuf/test_util.h
